{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 566,
  "lineage": "7df9f09b-a75c-4aa6-4def-b945c6c2d6ab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:264100014405:security-group/sg-01a496d759a3bcf60",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-01a496d759a3bcf60",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management20210614113815184600000006",
            "name_prefix": "all_worker_management",
            "owner_id": "264100014405",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ec5882f3d391162d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:264100014405:security-group/sg-073169c87ac1fdfa2",
            "description": "security group with an inbound rule that allows inbound NFS traffic for your Amazon EFS mount points",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-073169c87ac1fdfa2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "allows inbound NFS traffic from the CIDR for your cluster VPC",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "elk_efs",
            "name_prefix": "",
            "owner_id": "264100014405",
            "revoke_rules_on_delete": false,
            "tags": {
              "COMPONENT_NAME": "elk"
            },
            "tags_all": {
              "COMPONENT_NAME": "elk"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec5882f3d391162d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:264100014405:security-group/sg-04d795df64b3cc74a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04d795df64b3cc74a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one20210614113815186300000007",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "264100014405",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ec5882f3d391162d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:264100014405:security-group/sg-0210ef4c559ab70ed",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0210ef4c559ab70ed",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two20210614113816213900000008",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "264100014405",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ec5882f3d391162d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0559c304a936a4f94",
            "domain": "vpc",
            "id": "eipalloc-0706f60b92a211b68",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-02113f3ec7fc176b6",
            "private_dns": "ip-10-0-4-191.ap-southeast-2.compute.internal",
            "private_ip": "10.0.4.191",
            "public_dns": "ec2-54-66-158-33.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.66.158.33",
            "public_ipv4_pool": "amazon",
            "tags": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-ap-southeast-2a",
              "kubernetes.io/cluster/elk": "shared"
            },
            "tags_all": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-ap-southeast-2a",
              "kubernetes.io/cluster/elk": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:264100014405:internet-gateway/igw-0094fcc5451f5e125",
            "id": "igw-0094fcc5451f5e125",
            "owner_id": "264100014405",
            "tags": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc",
              "kubernetes.io/cluster/elk": "shared"
            },
            "tags_all": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc",
              "kubernetes.io/cluster/elk": "shared"
            },
            "vpc_id": "vpc-0ec5882f3d391162d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0706f60b92a211b68",
            "id": "nat-0f380a8b629ba1943",
            "network_interface_id": "eni-02113f3ec7fc176b6",
            "private_ip": "10.0.4.191",
            "public_ip": "54.66.158.33",
            "subnet_id": "subnet-0aa7d811b360ceb70",
            "tags": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-ap-southeast-2a",
              "kubernetes.io/cluster/elk": "shared"
            },
            "tags_all": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-ap-southeast-2a",
              "kubernetes.io/cluster/elk": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01f3d04e0a6f7fe601080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f380a8b629ba1943",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01f3d04e0a6f7fe60",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0094fcc5451f5e125",
            "id": "r-rtb-02dd07e8dfe17994e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02dd07e8dfe17994e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:264100014405:route-table/rtb-01f3d04e0a6f7fe60",
            "id": "rtb-01f3d04e0a6f7fe60",
            "owner_id": "264100014405",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f380a8b629ba1943",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-private",
              "kubernetes.io/cluster/elk": "shared"
            },
            "tags_all": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-private",
              "kubernetes.io/cluster/elk": "shared"
            },
            "vpc_id": "vpc-0ec5882f3d391162d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:264100014405:route-table/rtb-02dd07e8dfe17994e",
            "id": "rtb-02dd07e8dfe17994e",
            "owner_id": "264100014405",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0094fcc5451f5e125",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-public",
              "kubernetes.io/cluster/elk": "shared"
            },
            "tags_all": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-public",
              "kubernetes.io/cluster/elk": "shared"
            },
            "vpc_id": "vpc-0ec5882f3d391162d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073a4d28251b5aabf",
            "route_table_id": "rtb-01f3d04e0a6f7fe60",
            "subnet_id": "subnet-04c21a0b4667abbe0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b471ac75637eac83",
            "route_table_id": "rtb-01f3d04e0a6f7fe60",
            "subnet_id": "subnet-05064f37ff72c981b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0344aef1ee7baa2e2",
            "route_table_id": "rtb-01f3d04e0a6f7fe60",
            "subnet_id": "subnet-03c212be82f2b80f8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfeda61b30dee58c",
            "route_table_id": "rtb-02dd07e8dfe17994e",
            "subnet_id": "subnet-0aa7d811b360ceb70"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dae946d1cfa89f84",
            "route_table_id": "rtb-02dd07e8dfe17994e",
            "subnet_id": "subnet-0860e172f599e6bb3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027f93863ce455777",
            "route_table_id": "rtb-02dd07e8dfe17994e",
            "subnet_id": "subnet-04683625dc8e5eadb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:264100014405:subnet/subnet-04c21a0b4667abbe0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04c21a0b4667abbe0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "264100014405",
            "tags": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-private-ap-southeast-2a",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-private-ap-southeast-2a",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ec5882f3d391162d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:264100014405:subnet/subnet-05064f37ff72c981b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-05064f37ff72c981b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "264100014405",
            "tags": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-private-ap-southeast-2b",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-private-ap-southeast-2b",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ec5882f3d391162d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:264100014405:subnet/subnet-03c212be82f2b80f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-03c212be82f2b80f8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "264100014405",
            "tags": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-private-ap-southeast-2c",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-private-ap-southeast-2c",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ec5882f3d391162d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:264100014405:subnet/subnet-0aa7d811b360ceb70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0aa7d811b360ceb70",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "264100014405",
            "tags": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-public-ap-southeast-2a",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-public-ap-southeast-2a",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ec5882f3d391162d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:264100014405:subnet/subnet-0860e172f599e6bb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0860e172f599e6bb3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "264100014405",
            "tags": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-public-ap-southeast-2b",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-public-ap-southeast-2b",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ec5882f3d391162d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:264100014405:subnet/subnet-04683625dc8e5eadb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-04683625dc8e5eadb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "264100014405",
            "tags": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-public-ap-southeast-2c",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-public-ap-southeast-2c",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ec5882f3d391162d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:264100014405:vpc/vpc-0ec5882f3d391162d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fa933c319c46ff45",
            "default_route_table_id": "rtb-0bce1ce34a78930ac",
            "default_security_group_id": "sg-046d511e8d539d0a4",
            "dhcp_options_id": "dopt-9b3e11fc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ec5882f3d391162d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bce1ce34a78930ac",
            "owner_id": "264100014405",
            "tags": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc",
              "kubernetes.io/cluster/elk": "shared"
            },
            "tags_all": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc",
              "kubernetes.io/cluster/elk": "shared"
            }
          }
        }
      ]
    }
  ]
}